k8s/base/automation/ingress/evolution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-ingress
  labels:
    app: evolution
    domain: automacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evolution
            pathType: Prefix
            backend:
              service:
                name: evolution
                port:
                  number: 8080
