k8s/base/automation/ingress/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  labels:
    app: n8n
    domain: automacao
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /n8n
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
